<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.personal.neycasilla.dangerousroutes.fragments.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_launcher_danger"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="22dp"
                        android:text="@string/danger_zone"
                        android:textAlignment="center"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edit_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:padding="8dp" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="22dp"
                    android:text="@string/login" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:text="@string/register_here" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/waiting_screem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_for_everyone"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_wait"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>
