<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.personal.neycasilla.dangerousroutes.fragments.RegisterDangerZoneFragment">
    <android.support.v7.widget.Toolbar
        android:title="Agrgar una zona peligrosa"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/danger_image_view"
                android:layout_margin="20dp"
                android:src="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
            <TextView
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/title_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/sector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/sector_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/provincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/provincia_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/danger_register_button"
                android:text="@string/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
