<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.personal.neycasilla.dangerousroutes.fragments.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mail"
                    android:textStyle="bold"
                    android:textSize="22sp"/>
                <EditText
                    android:id="@+id/edit_text_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:textSize="22sp"/>
                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"/>
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_register_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/waiting_screem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_for_everyone"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_wait"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>
